2008-02-04  Daniel Hiepler <rigid@boogiepalace.hopto.org>

	* swmouse.c:
	corrected copyright note (i joined 2008 ;)
	Uncommented verbosity routines
	reformatted source according to kernel styleguide
	 (http://kernelnewbies.org/New_Kernel_Hacking_HOWTO/Kernel_Programming_Style_Guidelines)
	renamed press_rel() to swkeybd_keyHit()
	renamed press() to swkeybd_keyPress()
	renamed press_rel() to swkeybd_keyRelease()
	some commenting
	some beautifying
	
2008-02-03  Henrik Sandklef  <hesa@gnu.org>

	* Makefile: 
	Failure of rmmod (in try target) doesn't break exec.

2008-02-01  Henrik Sandklef  <hesa@gnu.org>

	* Makefile: 
	Set version to 0.7.3
	Adding src/swinput.h to dist
	Added test data to dist
	New rules: 
	dcheck - to test swinput modules using scripts
	try    - to insmod the modules 

	* test/inout.sh: 
	* test/all.sh: 
	New files

	* README: 
	More about building (make try, make test, make dist)
	
	* src/swkeybd.c: 
	Replaced some (deubg) printks against with optional macro
	swinput_debug

	* src/swmouse.c: 
	Replaced some (deubg) printks against with optional macro
	swinput_debug

	* src/swinput.h: 
	New file, first revision
	Contains header thingies used by both modules


2008-01-31  Henrik Sandklef  <hesa@sandklef.com>

	* Makefile: 
	Added better dist target 
	

2008-01-31 Daniel Hiepler <rigid@boogiepalace.hopto.org>

	* src/swmouse.c:
	Removed LONG() macro for it was removed from kernel 2.6.24
	

2008-01-29 Daniel Hiepler <rigid@boogiepalace.hopto.org>

	* src/Makefile:
	Fixed to work with kernel 2.6.23.9 and higher
	
	* src/code_mapping.c:
	removed file
	
	* src/swkeybd.c:
	Added remove_proc_entry() to cleanup_module()
	Removed NEW_INPUT_API
	Fixed compile warnings
	Added additional error handling to init_module()
	Use memset() now to clear swkeybd structure
	Added input_free_device() in cleanup_module() and init_module()
	Replaced strcmp() with strncmp()
	minor cleanups

	* src/swmouse.c:
	Removed NEW_INPUT_API
	Fixed compile warnings