@@ -5,12 +5,18 @@
 	Uncommented verbosity routines
 	reformatted source according to kernel styleguide
 	 (http://kernelnewbies.org/New_Kernel_Hacking_HOWTO/Kernel_Programming_Style_Guidelines)
-	renamed press_rel() to swkeybd_keyHit()
-	renamed press() to swkeybd_keyPress()
-	renamed press_rel() to swkeybd_keyRelease()
 	some commenting
 	some beautifying
 	
+        * swkeybd.c:
+        renamed press_rel() to swkeybd_keyHit()
+	renamed press() to swkeybd_keyPress()
+	renamed press_rel() to swkeybd_keyRelease()
+        renamed fake_key() to swkeybd_fakeKey()
+        used swkeybd_keyRelease() and swkeybd_keyPress() in swkeybd_fakeKey()
+        some commenting
+        some beautifying
+        
 2008-02-03  Henrik Sandklef  <hesa@gnu.org>
 
 	* Makefile: 
